// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToolTip display prop renders block 1`] = `
<span
  class="euiToolTipAnchor emotion-euiToolTipAnchor-block-EuiToolTip"
>
  <button>
    Trigger
  </button>
</span>
`;

exports[`EuiToolTip is rendered 1`] = `
<span
  class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock-EuiToolTip"
>
  <button>
    Trigger
  </button>
</span>
`;

exports[`EuiToolTip shows tooltip on focus 1`] = `
<span
  class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock-EuiToolTip"
>
  <button
    aria-describedby="id"
    data-test-subj="trigger"
  >
    Trigger
  </button>
</span>
`;
